Rename the reference packges path

--- a/gdprtestproject.model/GDPRTestProject.Model.csproj
+++ b/gdprtestproject.model/GDPRTestProject.Model.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\newangular.client\GDPRTestProject.client.esproj" />
-    <ProjectReference Include="..\newangular\GDPRTestProject.Data.csproj" />
+    <ProjectReference Include="..\GDPRTestProject\GDPRTestProject.Data.csproj" />
   </ItemGroup>
+
 
 
 </Project>
