--- a/gdprtestproject.services/GDPRTestProject.Services.csproj
+++ b/gdprtestproject.services/GDPRTestProject.Services.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\GDPRTestProject\GDPRTestProject.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helper\" />
+  </ItemGroup>
+
 </Project>
