Add Authentication using JWT Token

--- a/gdprtestproject.server/appsettings.json
+++ b/gdprtestproject.server/appsettings.json
@@ -3,12 +3,16 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "TestAngular"
   },
+  "Jwt": {
+    "Key": "gT7u$5s*6D%Xy&zP@f9RbL3wJ^2mM!aKxQ7tYjZ0pC4vVhB8sN",
+    "Issuer": "localhost",
+    "Audience": "localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*"
 }
